Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16454

can't set max_mod_rpcs_in_flight > 8

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.16.0
    • Lustre 2.15.1
    • None
    • 3
    • 9223372036854775807

      I am trying to increase mdc.*.max_mod_rpcs_in_flight to grater than 8 but I get an error.

       

      # lctl set_param mdc.fs1-MDT0000-mdc-ffff902107a5e000.max_rpcs_in_flight=128
      mdc.fs1-MDT0000-mdc-ffff902107a5e000.max_rpcs_in_flight=128

      #lctl set_param mdc.fs1-MDT0000-mdc-ffff902107a5e000.max_mod_rpcs_in_flight=127
      error: set_param: setting /sys/fs/lustre/mdc/fs1-MDT0000-mdc-ffff902107a5e000/max_mod_rpcs_in_flight=127: Numerical result out of range

      # lctl get_param version
      version=2.15.1

            vkuznetsov Vitaliy Kuznetsov
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: